--- a/src/styles/hiivelabs.com/colors.css
+++ b/src/styles/hiivelabs.com/colors.css
@@ -6,7 +6,7 @@
         --text-main: #36393b;
         --text-secondary: #6b6f72;
         --primary-color: #ff6707;
-        --primary-color-alt: #ffC747;
+        --primary-color-alt: #FF9717;
         --primary-color-contrast: #fff;
         --secondary-color: #ee4707;
         --heading-color: #dd4700;
